vbnc/vbnc/tests/Errors/32006-3.vb
Imports System
Class T
    Const M_String As int32 = "#"c
End Class